# stacks

./: CMakeLists.txt  doxyfile.in
reference/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  setup_application.in.h
source/ui/: about_dialog.cpp  about_dialog.h  about_dialog.ui  main_window.cpp  main_window.h  main_window.ui
